feat: Add CMS Image Application - MEED-2731 - Meeds-io/MIPs#98 (#3066)
This change will introduce a new portlet to allow addin images in a
page.